# ibkr-austria

./: .gitignore  README.md  forex.py  main.py
cpp/: .clang-tidy  CMakeLists.txt  README.md  ibkr.cpp
cpp/source/: currency.cpp  currency.h  currency.hpp  depot.cpp  depot.h  ibkr_parser.cpp  ibkr_parser.hpp  ledger.cpp  ledger.hpp  pnl.cpp  pnl.hpp  pnl_equity.cpp  pnl_equity.hpp  pnl_forex.cpp  pnl_forex.hpp  rate_parser.cpp  rate_parser.hpp  security.cpp  security.h  security.hpp  tranche.cpp  tranche.h  tranche.hpp
ecb_rates/: fetch.py
python/: main.py
txt2xls/: Makefile  ibkr-txt2xls.py
